--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql-request": "^7.1.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
